--- a/Assuntos/Butões e seus tipos/index.html
+++ b/Assuntos/Butões e seus tipos/index.html
@@ -8,6 +8,14 @@
 <body>
     <h1>Botões e seus tipos</h1>
 
-    <button type="button">Clicável</button>
+    <form action="get">
+        
+        <label>Nome:</label> <input type="text" name="name">   <br>
+        <label>Idade:</label> <input type="number" name="age" > <br>
+        <label>Password</label> <input type="password" name="password" > <br>
+        <button type="button">Clicável</button>
+        <button type="reset">Reset</button>
+        <button type="submit">Enviar</button>
+    </form>
 </body>
 </html>
