--- a/Assuntos/Embeds e Iframes/index.html
+++ b/Assuntos/Embeds e Iframes/index.html
@@ -4,11 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Embeds e Iframes</title>
+    <style>
+        body {
+            background-color: chartreuse;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
     <h1>Trabalhando com Embeds e Iframes</h1>
     <h2>Embeds</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis dolorem reprehenderit sunt quod hic consequuntur dignissimos impedit quos rerum fugiat sequi nam aperiam deleniti aut, exercitationem temporibus. Explicabo, ab obcaecati.</p>
     <embed src="videos/videoplayback.mp4" type=""> <!--Esta tag está ultrapassada, estamos usando a TAG video-->
+
+        <h2>Mostrando conteúdos com iframe</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/55ymwJZfcLQ?si=cYhwOwxo2VGraddO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <br>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3958.8245800223604!2d-34.97338642643078!3d-7.146273070099931!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7acef218f79267d%3A0xe7ddd15ce00deed8!2sR.%20Abiatar%20de%20Vasconcelos%20-%20Tibiri%2C%20Santa%20Rita%20-%20PB%2C%2058302-470!5e0!3m2!1spt-BR!2sbr!4v1728609417002!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </body>
 </html>
