--- a/CSS/Fontes/Personalizando as Fontes do Nosso Site.html
+++ b/CSS/Fontes/Personalizando as Fontes do Nosso Site.html
@@ -19,11 +19,14 @@
             font-family: Dancing Script;
             font-optical-sizing: auto;
             font-style: normal;
-            font-size:54px
+            font-size:54px;
         }
 
         p{
             font-family: Oswald;
+            font-weight: lighter;
+            font-variant: small-caps;
+            line-height: 10px;
         }
 
 
@@ -47,5 +50,21 @@
         <li>Item 4</li>
         <li>Item 5</li>
     </ul>
+
+    <br>
+
+    <h1>Propriedade <code>font</code></h1>
+
+    <p>Aceita em uma única linha de códigos as propriedades:</p>
+    <ul>
+        <li><code>font-style</code></li>
+        <li><code>font-variant</code></li>
+        <li><code>font-weight</code></li>
+        <li><code>font-size/line height</code></li>
+        <li><code>font-family</code></li>
+    </ul>
+
+    <p>exemplo:</p>
+    <p>font: italic small-caps bold 24/2 Georgia, serif;</p>
 </body>
 </html>
